<resources>
    <string name="app_name">Doggie</string>
    <string name="google_maps_api_key">AIzaSyDnSUoYgc89XVzQOam4vZU3PUWVXU4Q-LQ</string>

    <string name="show_on_map">Show on Map</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="verify_email">Verify Email</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="password">Password</string>
    <string name="tabian_consulting_logo">Tabian Consulting Logo</string>
    <string name="email_registration">Email Registration</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="my_dogs_only">My Dogs Only</string>

    <!-- Firestore Strings -->
    <string name="collection_users">Users</string>
    <string name="collection_dogs">Dogs</string>
    <string name="collection_user_dogs">Dog List</string>
    <string name="collection_chatrooms">Chatrooms</string>
    <string name="collection_chat_messages">Chat Messages</string>
    <string name="collection_chatroom_user_list">User List</string>
    <string name="collection_user_locations">User Locations</string>

    <!-- Intent extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_user_list">intent_user_list</string>
    <string name="intent_user_locations">intent_user_locations</string>
    <string name="intent_location">intent_location</string>

    <string name="value_any_breed">All Breeds</string>
    <string name="value_any_gender">Any Gender</string>
    <string name="value_any_distance">Any price</string>

    <!-- Height of each list item -->
    <dimen name="list_item_height">88dp</dimen>
    <!-- Default screen margins, per the Android Design guidelines. -->
    <dimen name="activity_horizontal_margin">16dp</dimen>
    <dimen name="activity_vertical_margin">16dp</dimen>

    <string name="all_dogs">All Dogs</string>
    <string name="header_filters">Filter</string>
    <string name="header_register_dog">Register a New Dog</string>
    <string name="search">Search</string>
    <plurals name="fmt_dog_age">
        <item quantity="one">(%d year old)</item>
        <item quantity="other">(%d years old)</item>
    </plurals>
    <string name="fmt_distance">%s km</string>
    <string name="fmt_weight">%.01f kg</string>

    <string name="sort_by_distance">Sort by Distance</string>
    <string name="sort_by_age">Sort by Age</string>
    <string name="sort_by_weight">Sort by Weight</string>

    <string name="sorted_by_distance">sorted by distance</string>
    <string name="sorted_by_age">sorted by age</string>
    <string name="sorted_by_weight">sorted by weight</string>

    <string name="add_random_items">Add Random Items</string>
    <string name="sign_out">Sign Out</string>
    <string name="divider_bullet">•</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="birthday">Dog\'s Birthday</string>
    <string name="message_no_results">Oops, couldn\'t find any results</string>

    <string name="title_sign_in_error">Sign In Error</string>
    <string name="message_no_network">No network connection.</string>
    <string name="message_unknown">Unknown error.</string>
    <string name="option_retry">Retry</string>
    <string name="option_exit">Exit</string>

    <!-- Types of dogs breeds -->
    <string-array name="breeds">
        <item>@string/value_any_breed</item>

        <item>Mixed</item>
        <item>Unknown</item>
        <item>Bulldog</item>
        <item>German Shepherd</item>
        <item>Labrador Retriever</item>
        <item>Beagle</item>
        <item>Poodle</item>
        <item>Golden Retriever</item>
        <item>Chihuahua</item>
        <item>Pug</item>
        <item>Boxer</item>
        <item>Dachshund</item>
        <item>Yorkshire Terrier</item>
        <item>French Bulldog</item>
        <item>Siberian Husky</item>
        <item>Dobermann</item>
        <item>Great Dane</item>
        <item>Rottweiler</item>
        <item>Pomeranian</item>
        <item>Pointer</item>
        <item>English Mastiff</item>
    </string-array>

    <string-array name="breeds_types">
        <item>Unknown</item>
        <item>Mixed</item>
        <item>Bulldog</item>
        <item>German Shepherd</item>
        <item>Labrador Retriever</item>
        <item>Beagle</item>
        <item>Poodle</item>
        <item>Golden Retriever</item>
        <item>Chihuahua</item>
        <item>Pug</item>
        <item>Boxer</item>
        <item>Dachshund</item>
        <item>Yorkshire Terrier</item>
        <item>French Bulldog</item>
        <item>Siberian Husky</item>
        <item>Dobermann</item>
        <item>Great Dane</item>
        <item>Rottweiler</item>
        <item>Pomeranian</item>
        <item>Pointer</item>
        <item>English Mastiff</item>
    </string-array>

    <!-- Genders -->
    <string-array name="genders">
        <item>@string/value_any_gender</item>

        <item>@string/female</item>
        <item>@string/male</item>
    </string-array>

    <!-- Ways you can sort restaurants -->
    <string-array name="sort_by">
        <item>@string/sort_by_distance</item>
        <item>@string/sort_by_age</item>
        <item>@string/sort_by_weight</item>
    </string-array>

    <string name="loading">Loading…</string>
    <string name="signed_out">Signed Out</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>

    <string name="facebook_app_id">2315800118700897</string>
    <string name="facebook_application_id">2315800118700897</string>

    <!-- Fragments Names -->
    <string name="fragment_user_list">User List</string>
    <string name="fragment_image_list">Image List</string>
</resources>
